clean iOS-Playground App with Resources

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ playground.xcworkspace
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
+MapView.swiftpm/.swiftpm
+MapView.swiftpm/.derivedData
